# boomi-python

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.local.md  Makefile  PyPI_README.md  README.md  install.cmd  install.sh  pyproject.toml
.github/workflows/: publish.yml
docs/: model_invariants.md
documentation/: change-log.md  component_xml_byte_safety.md  component_xml_raw_only_migration.md
documentation/models/: Account.md  AccountBulkRequest.md  AccountBulkResponse.md  AccountCloudAttachmentProperties.md  AccountCloudAttachmentPropertiesAsyncResponse.md  AccountCloudAttachmentQuota.md  AccountCloudAttachmentQuotaBulkRequest.md  AccountCloudAttachmentQuotaBulkResponse.md  AccountExpression.md  AccountGroup.md  AccountGroupAccount.md  AccountGroupAccountExpression.md  AccountGroupAccountGroupingExpression.md  AccountGroupAccountQueryConfig.md  AccountGroupAccountQueryResponse.md  AccountGroupAccountSimpleExpression.md  AccountGroupBulkRequest.md  AccountGroupBulkResponse.md  AccountGroupExpression.md  AccountGroupGroupingExpression.md  AccountGroupIntegrationPack.md  AccountGroupIntegrationPackBulkRequest.md  AccountGroupIntegrationPackBulkResponse.md  (+778 more)
examples/: .env.example  README.md
openapi/: openapi.json  platformOpenAPI.json  platformOpenAPISpec.json  platformOpenAPISv3.0.3.json
scripts/: fix_async_response_required_args.py  fix_bulk_response_result.py  fix_int_coercion.py  verify_after_schema_update.sh
tests/: test_bug11_udf_construction.py  test_define_object_autowrap.py  test_model_invariants.py  test_platform_openapi_spec_delta.py
(+1601 files in other folders)
